# chinese-buddy

./: .gitignore  LICENSE  README.md
.github/workflows/: pages.yml
backend/: .env.example  pyproject.toml
backend/chinese_buddy/: __init__.py  main.py  memory.py  tutor.py
backend/tests/: conftest.py  test_integration.py  test_memory.py  test_tutor.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
specs/: implementation-plan.md  tech-stack-recommendation.md  vision.md
specs/adrs/: 0001-use-deep-agents.md  0002-chat-first-streaming-ui.md  0003-local-persistent-learner-memory.md  0004-generated-examples-acceptable.md  0005-defer-audio-recognition.md  0006-python-fastapi-react-stack.md  0007-use-openrouter-model-gateway.md
