[project]
name = "chinese-buddy-backend"
version = "0.1.0"
description = "Local Deep Agents backend for Chinese Buddy."
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.6.0",
  "fastapi>=0.115.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
  "integration: requires OPENROUTER_API_KEY, makes real LLM calls (skip with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "PT", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["chinese_buddy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
